[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Substrate API client."
edition     = "2021"
homepage    = "https://subapeye.hack.ink"
license     = "GPL-3.0"
name        = "subapeye"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subapeye"
version     = "0.1.0"

[features]
debug = []
trace = [
	# crates.io
	"subrpcer/trace",
]

[dependencies]
# crates.io
array-bytes        = { version = "6.1" }
async-trait        = { version = "0.1" }
futures            = { version = "0.3" }
fxhash             = { version = "0.2" }
num_cpus           = { version = "1.15" }
parity-scale-codec = { version = "3.4" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0", features = ["raw_value"] }
submetadatan       = { version = "0.10" }
subrpcer           = { version = "0.10" }
substorager        = { version = "0.10" }
thiserror          = { version = "1.0" }
tokio              = { version = "1.27", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream       = { version = "0.1" }
tokio-tungstenite  = { version = "0.18", features = ["rustls-tls-native-roots"] }
tracing            = { version = "0.1" }

tracing-subscriber = { version = "0.3" }

[patch.crates-io]
submetadatan = { version = "0.10", path = "../substrate-minimal/submetadatan" }
subrpcer     = { version = "0.10", path = "../substrate-minimal/subrpcer" }
substorager  = { version = "0.10", path = "../substrate-minimal/substorager" }
