[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "subapeye"
edition     = "2021"
homepage    = "https://github.com/darwinia-network/subxt"
license     = "GPL-3.0"
name        = "subapeye"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/subxt"
version     = "0.1.0"

[dependencies]

thiserror         = "1"
async-trait       = "0.1"
tokio-tungstenite = { optional = true, version = "0.18" }
reqwest           = { optional = true, version = "0.11" }

subcryptor        = { branch = "main", git = "https://github.com/hack-ink/subalfred" }
subgrandpa        = { branch = "main", git = "https://github.com/hack-ink/subalfred" }
subhasher         = { branch = "main", git = "https://github.com/hack-ink/subalfred" }
subrpcer          = { branch = "main", git = "https://github.com/hack-ink/subalfred" }
subruntimer       = { branch = "main", git = "https://github.com/hack-ink/subalfred" }
subspector        = { branch = "main", git = "https://github.com/hack-ink/subalfred" }
substorager       = { branch = "main", git = "https://github.com/hack-ink/subalfred" }
subversioner      = { branch = "main", git = "https://github.com/hack-ink/subalfred" }

[features]
default       = ["provider-http", "provider-ws"]
provider-http = ["reqwest"]
provider-ws   = ["tokio-tungstenite"]
